--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
+    testImplementation('org.mockito:mockito-junit-jupiter:3.1.0')
     testImplementation('org.assertj:assertj-core:3.13.2')
 }
 
